# RealTimePointCloud

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  QUICKSTART.md  README.md  build.sh  config.txt
cuda/: inference.cu  memory_pool.cu  preprocessing.cu  preprocessing.cuh  voxelization.cu
include/: IMUProcessor.h  PointCloudProcessor.h  PointNetNN.h  memory_pool.h  point_cloud_types.h  visualizer.h
src/: CMakeLists.txt  Dockerfile  IMUProcessor.cpp  PROJECT_SUMMARY.md  Pipeline.h  PointCloudProcessor.cpp  PointCloudProcessor.cu  PointCloudProcessorCUDA.cu  PointNetNN.cu  config.cpp  inference.cuh  main.cpp  pipeline.cpp  point_cloud.cpp  preprocessing.cu  timer.cpp  visualizer.cpp
tests/: benchmark.cpp  unit_tests.cpp
